# aicodinggym-cli

./: .gitignore  README.md  __init__.py  api.py  cli.py  cli_env.py  config.py  dashboard.html  entire_logging.py  experiment_log.py  git_ops.py  gym_logger.py  pyproject.toml  session_log.py  supervisor.sh  supervisor_assets.py
templates/: dashboard.html  notebook_metrics.py  summarize_approach.py  supervisor.sh.template
tests/: test_cli_logging.py  test_config_consent.py  test_entire_logging.py  test_git_ops_restore.py
tools/: notebook_metrics.py  summarize_approach.py
